[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = "0.4.7"
comfy-table = "6.1.2"
prettytable-rs = "0.9.0"
rand = "0.8.5"
round = "0.1.2"
tabled = "0.10.0"
use = "0.0.0"

